assets/css/custom/_customstyles.scss
/* -------------------------------------------------- */
/* Google custom search box and results */
.gs-result:hover {
	@extend .bg-light;
}
.gsc-search-box {
	min-width: 30em;
}

/* -------------------------------------------------- */
/* Main page content */

.main-page-content {
    margin-bottom: 110px;
}
.main-page-content p {
  text-align: justify;
}


/* -------------------------------------------------- */
/* Code blocks */

pre {
  background-color: #eeeeee;
  padding: 0.8em;
  border-radius: 0.3em;
}

/* -------------------------------------------------- */
/* Page Table of Contents */

.page-toc {
    position: fixed;
    font-size: 80%;
    padding-top: 2em;
}
.page-toc a {
    @extend .text-muted;
}


/* -------------------------------------------------- */
/* Sticky footer styles */

html {
  position: relative;
  min-height: 100%;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 90px; /* Set the fixed height of the footer here */
  background-color: #f8f9fa;
}

.footer-content {
  padding-top: 1em;
  padding-bottom: 1em;
}
.footer-content p {
  margin: 0;
  padding: 0;
}

